--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
+    "http-status": "^1.0.1",
     "socket.io": "^1.7.3",
     "twitter": "^1.7.0",
     "underscore": "^1.8.3"
