link to twitter

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.14.1",
     "http-status": "^1.0.1",
     "socket.io": "^1.7.3",
+    "twit": "^2.2.5",
     "twitter": "^1.7.0",
     "underscore": "^1.8.3"
   }
