--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Social media feeds displayed in Matrix style",
   "main": "index.js",
   "scripts": {
-    "start": "sudo node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
