--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "http-status": "^1.0.1",
+    "indico.io": "^0.10.5",
     "socket.io": "^1.7.3",
     "twit": "^2.2.5",
     "twitter": "^1.7.0",
